--- a/index.html
+++ b/index.html
@@ -7,29 +7,58 @@
     <title>Task 1</title>
     <link rel="stylesheet" href="style.css">
 
+    <!-- jQuery import link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
 </head>
 
 <body>
     <header>
-        <div class="title">To-do List</div>
-        <nav>
-            <a href="/index.html">To-do list</a>
-            <a href="/quote_generator.html">Quote generator</a>
-        </nav>
-    </header>
-    <section class="task-section">
-        <div class="new-task">
-            <input type="text" id="new-task-inp">
-            <input type="button" id="add-task-btn" value="Add task">
+        <!-- menu bar section -->
+        <div class="menuContainer" id="menuBarContainer">
+            <div class="menuBar1"></div>
+            <div class="menuBar2"></div>
+            <div class="menuBar3"></div>
         </div>
-        <div class="task-list-div">
-            <ul id="task-list-parent">
-               
+
+        <div class="HeaderSub">
+            <div class="title">To-do List</div>
+
+            <!-- nav bar section -->
+            <nav>
+                <a href="/index.html">To-do list</a>
+                <a href="/quote_generator.html">Quote generator</a>
+            </nav>
+
+        </div>
+
+
+    </header>
+    <!-- side nav -->
+    <div id="sideNav" class="sideNav">
+        <!-- menu bar section -->
+        <div class="menuContainer menuClose" id="menuCloseContainer">
+            <div class="menuBar1"></div>
+            <div class="menuBar2"></div>
+            <div class="menuBar3"></div>
+        </div>
+        <a href="/index.html">To-do list</a>
+        <a href="/quote_generator.html">Quote generator</a>
+    </div>
+
+    <section class="taskSection">
+        <div class="newTask">
+            <input type="text" id="newTaskInp">
+            <input type="button" id="addTaskBtn" value="Add task">
+        </div>
+
+        <!-- tasks list starts -->
+        <div class="taskListDiv">
+            <ul id="taskListParent">
+
             </ul>
         </div>
-    </section>  
+    </section>
 
     <script src="script.js"></script>
 </body>
