Integrate third-party API for quote generation

--- a/quote_generator.html
+++ b/quote_generator.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
 
 
 </head>
+
 <body>
     <header>
         <!-- menu bar section -->
@@ -47,11 +49,15 @@
 
 
     <!-- Quote generator -->
-    <section>
+    <section class="quoteGeneratorSection">
         <button id="generatorBtn">Generate quote!</button>
-        <p id="quoteContent"></p>
+        <div class="quoteTextArea">
+            <p id="quoteContent"></p>
+            <p id="quoteAuthor"></p>
+        </div>
     </section>
 
-    <script src="script.js" ></script>
+    <script src="script.js"></script>
 </body>
-</html> 
+
+</html>
