--- a/quote_generator.html
+++ b/quote_generator.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 1</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 
     <!-- jQuery import link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -22,7 +22,7 @@
             <div class="menuBar3"></div>
         </div>
 
-        <div class="HeaderSub">
+        <div class="headerSub">
             <div class="title">Quote Generator</div>
 
             <!-- nav bar section -->
