In this commit, Updated the code to follow the coding standards

--- a/index.html
+++ b/index.html
@@ -48,17 +48,46 @@
 
     <section class="taskSection">
         <div class="newTask">
-            <input type="text" id="newTaskInp">
+            <input type="text" placeholder="Enter new task" id="newTaskInp">
             <input type="button" id="addTaskBtn" value="Add task">
         </div>
 
         <!-- tasks list starts -->
+        <h2 class="tasksHeading">Tasks:</h2>
         <div class="taskListDiv">
             <ul id="taskListParent">
 
             </ul>
         </div>
     </section>
+
+    <footer>
+        <h2>Task 1 - To do List</h2>
+
+        <div class="footerBottom">
+            <div class="contactDetails">
+               <p class="contactHeader">Contact</p>
+               <p>Email: contact@example.com</p>
+               <p>Phone: +91 09876-54321</p>
+            </div>
+            <div class="footerLinks">
+                <p class="footerLinksHeader">Links</p>
+                <a href="/index.html"><img src="/images/icons8-todo-list-24.png" class="footerIcons" alt="todo-list-icon"> To-do list</a>
+                <a href="/quote_generator.html"><img src="/images/icons8-quote-24.png" class="footerIcons" alt=""> Quote generator</a> 
+            </div>
+            <div class="footerLocation">
+                <p class="locationHeader">Location</p>
+                <p>123 Main Street</p>
+                <p>City, State Country</p>
+            </div>
+        </div>
+        
+        <!-- footer image -->
+        <img src="/images/compliant.png" class="footerBottomImg" alt="">
+
+        <p>&copy; 2024 Zennode. All rights reserved.</p>
+    </footer>
+
 
     <script src="script.js"></script>
 </body>
