--- a/quote_generator.html
+++ b/quote_generator.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="headerSub">
-            <div class="title">Quote Generator</div>
+            <h1 class="title">Quote Generator</h1>
 
             <!-- nav bar section -->
             <nav>
@@ -49,13 +49,42 @@
 
 
     <!-- Quote generator -->
-    <section class="quoteGeneratorSection">
+    <div class="quoteGeneratorSection">
         <button id="generatorBtn">Generate quote!</button>
         <div class="quoteTextArea">
             <p id="quoteContent"></p>
             <p id="quoteAuthor"></p>
         </div>
-    </section>
+    </div>
+
+    <footer>
+        <h2>Task 1 - Quote Generator</h2>
+
+        <div class="footerBottom">
+            <div class="contactDetails">
+                <p class="contactHeader">Contact</p>
+                <p>Email: contact@example.com</p>
+                <p>Phone: +91 09876-54321</p>
+            </div>
+            <div class="footerLinks">
+                <p class="footerLinksHeader">Links</p>
+                <a href="/index.html"><img src="/images/icons8-todo-list-24.png" class="footerIcons"
+                        alt="todo-list-icon"> To-do list</a>
+                <a href="/quote_generator.html"><img src="/images/icons8-quote-24.png" class="footerIcons" alt=""> Quote
+                    generator</a>
+            </div>
+            <div class="footerLocation">
+                <p class="locationHeader">Location</p>
+                <p>123 Main Street</p>
+                <p>City, State Country</p>
+            </div>
+        </div>
+
+        <!-- footer image -->
+        <img src="/images/compliant.png" class="footerBottomImg" alt="">
+
+        <p>&copy; 2024 Zennode. All rights reserved.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
