In this commit, Updatad the code to follow the coding standards

--- a/quote_generator.html
+++ b/quote_generator.html
@@ -1,43 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 1</title>
     <link rel="stylesheet" href="styles.css">
-
     <!-- jQuery import link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-
 </head>
-
 <body>
+    <!-- header -->
     <header>
-        <!-- menu bar section -->
         <div class="menuContainer" id="menuBarContainer">
             <div class="menuBar1"></div>
             <div class="menuBar2"></div>
             <div class="menuBar3"></div>
         </div>
-
         <div class="headerSub">
             <h1 class="title">Quote Generator</h1>
-
-            <!-- nav bar section -->
             <nav>
                 <a href="/index.html">To-do list</a>
                 <a href="/quote_generator.html">Quote generator</a>
             </nav>
-
         </div>
-
-
     </header>
     <!-- side nav -->
     <div id="sideNav" class="sideNav">
-        <!-- menu bar section -->
         <div class="menuContainer menuClose" id="menuCloseContainer">
             <div class="menuBar1"></div>
             <div class="menuBar2"></div>
@@ -46,47 +34,41 @@
         <a href="/index.html">To-do list</a>
         <a href="/quote_generator.html">Quote generator</a>
     </div>
-
-
     <!-- Quote generator -->
-    <div class="quoteGeneratorSection">
-        <button id="generatorBtn">Generate quote!</button>
-        <div class="quoteTextArea">
-            <p id="quoteContent"></p>
-            <p id="quoteAuthor"></p>
+    <main>
+        <div class="quoteGeneratorSection">
+            <button id="generatorBtn">Generate quote!</button>
+            <div class="quoteTextArea">
+                <p id="quoteContent"></p>
+                <p id="quoteAuthor"></p>
+            </div>
         </div>
-    </div>
-
+    </main>
+    <!-- footer -->
     <footer>
         <h2>Task 1 - Quote Generator</h2>
-
         <div class="footerBottom">
-            <div class="contactDetails">
-                <p class="contactHeader">Contact</p>
-                <p>Email: contact@example.com</p>
-                <p>Phone: +91 09876-54321</p>
-            </div>
-            <div class="footerLinks">
-                <p class="footerLinksHeader">Links</p>
-                <a href="/index.html"><img src="/images/icons8-todo-list-24.png" class="footerIcons"
-                        alt="todo-list-icon"> To-do list</a>
-                <a href="/quote_generator.html"><img src="/images/icons8-quote-24.png" class="footerIcons" alt=""> Quote
-                    generator</a>
-            </div>
-            <div class="footerLocation">
-                <p class="locationHeader">Location</p>
-                <p>123 Main Street</p>
-                <p>City, State Country</p>
-            </div>
+            <ul class="contactDetails">
+                <li class="contactHeader">Contact</li>
+                <li>Email: contact@example.com</li>
+                <li>Phone: +91 09876-54321</li>
+            </ul>
+            
+            <ul class="footerLinks">
+                <li class="footerLinksHeader">Links</li>
+                <li><a href="/index.html"><img src="/images/icons8-todo-list-24.png" class="footerIcons" alt="todo-list-icon"> To-do list</a></li>
+                <li><a href="/quote_generator.html"><img src="/images/icons8-quote-24.png" class="footerIcons" alt=""> Quote generator</a></li>
+            </ul>
+            
+            <ul class="footerLocation">
+                <li class="locationHeader">Location</li>
+                <li>123 Main Street</li>
+                <li>City, State Country</li>
+            </ul>
         </div>
-
-        <!-- footer image -->
         <img src="/images/compliant.png" class="footerBottomImg" alt="">
-
         <p>&copy; 2024 Zennode. All rights reserved.</p>
     </footer>
-
     <script src="script.js"></script>
 </body>
-
 </html>
