--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task 1</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- jQuery import link -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
@@ -44,7 +44,6 @@
             <h2 class="tasksHeading">Tasks:</h2>
             <div class="taskListDiv">
                 <ul id="taskListParent">
-
                 </ul>
             </div>
         </section>
